play returns empty list of winners when the dealer beats all opponents